--- a/.env.dev
+++ b/.env.dev
@@ -2,3 +2,5 @@
 ###> symfony/framework-bundle ###
 APP_SECRET=b2a0bcccc2f5e1fd6f094c0aa0da3391
 ###< symfony/framework-bundle ###
+
+DATABASE_URL="mysql://root:@127.0.0.1:3306/classSymfo?serverVersion=11.5.2-MariaDB&charset=utf8mb4"
