--- a/.github/workflows/livre-rojet.yml
+++ b/.github/workflows/livre-rojet.yml
@@ -30,7 +30,7 @@ jobs:
             uses: shivammathur/setup-php@v2
             with:
                 php-version: 8.2
-                extensions: pdo, pdo_mysql
+                extensions: mbstring, intl, pdo_mysql, sodium
                 tools: composer:v2
 
           # Installer composer
