--- a/.github/workflows/livre-projet.yml
+++ b/.github/workflows/livre-projet.yml
@@ -8,9 +8,10 @@ on:
 
 # liste des jobs à exécuter
 jobs:
-    nom-job:
+    deploy:
         # démarre une image ubuntun
         runs-on: ubuntu-latest
+            
 
      # Services nécessaires : Base de données MySQL 8
         services:
@@ -24,6 +25,8 @@ jobs:
               options: --health-cmd="mysqladmin ping --silent" --health-interval=10s --health-timeout=5s --health-retries=3
 
         steps:
+          - name: Checkout code
+            run: echo "Ubuntu deployé"
           #Installer PHP (même version que l'environnement dev)
           - name: Installer PHP et Composer
             uses: shivammathur/setup-php@v2
