--- a/.github/workflows/livre-projet.yml
+++ b/.github/workflows/livre-projet.yml
@@ -44,7 +44,7 @@ jobs:
           - name: Configurer l'environnement
             run: |
                cp .env.test .env
-               echo "DATABASE_URL=mysql://root:root:@127.0.0.1:3306/cypress" >> .env
+               echo "DATABASE_URL=mysql://root:root@127.0.0.1:3306/cypress" >> .env
 
           # Installer composer
           - name: Installer composer
