--- a/.github/workflows/livre-projet.yml
+++ b/.github/workflows/livre-projet.yml
@@ -47,8 +47,10 @@ jobs:
           # Configurer le projet (dev -> test)
           - name: Configurer l'environnement
             run: |
-               cp .env.test .env
-               echo "DATABASE_URL=mysql://root:root@127.0.0.1:3306/cypress" >> .env
+               cp .env .env.test
+               echo "APP_ENV=test" >> .env
+               echo "APP_ENV=test" >> .env.test
+               echo "DATABASE_URL=mysql://root:root@127.0.0.1:3306/cypress" >> .env.test
 
           # Installer composer
           - name: Installer composer
