--- a/.github/workflows/livre-projet.yml
+++ b/.github/workflows/livre-projet.yml
@@ -47,10 +47,14 @@ jobs:
           # Configurer le projet (dev -> test)
           - name: Configurer l'environnement
             run: |
-               cp .env .env.test
-               echo "APP_ENV=test" >> .env
-               echo "APP_ENV=test" >> .env.test
-               echo "DATABASE_URL=mysql://root:root@127.0.0.1:3306/cypress" >> .env
+              if [ ! -f .env ]; then
+              touch .env
+              echo "Fichier .env créé"
+              fi
+              cp .env .env.test
+              echo "APP_ENV=test" >> .env
+              echo "APP_ENV=test" >> .env.test
+              echo "DATABASE_URL=mysql://root:root@127.0.0.1:3306/cypress" >> .env
 
           # Installer composer
           - name: Installer composer
